--- a/awaards/templates/index.html
+++ b/awaards/templates/index.html
@@ -31,13 +31,41 @@
     }
 </style>
 <body>
-<div class="image">
+    <div class="container-fluid">
 
-</div>
-<div class="bg-text">
-<h1>AWAARDS</h1>
-<p>The Projects' Gallery</p>
-</div>
+        <div class="row">
+                <div class="image">
+
+                    </div>
+                    <div class="bg-text">
+                    <h1>AWAARDS</h1>
+                    <p>The Projects' Gallery</p>
+                    </div>
+        </div>
+    </div>
+    <div class="row">
+            {% for project in project %}
+            <div class="col-md-4">
+            <div class="card-group wow fadeInLeft"  style="margin:2%;" data-aos='fade-up'>
+                    <div class="view overlay zoom ">
+                            <img src="{{project.image.url}}" class="card-img-top">
+                            <div class="mask flex-center rgba-black-strong">
+                                <a href="{% url 'projects' project.pk %}" class="btn btn-pink" >VIEW <i class="far fa-chevron-double-right"></i>  </a>
+                            </div>
+                    </div>
+            
+            <div class="card-body" style="border:2px #00BCD4;">
+                <a href=""><h5 class="strong-text"> <strong>{{project.title}}</strong> </h5> </a> <hr class="bg-info">
+                <p class="black-text pull-right">{{project.pub_date|date:"F d,Y"}}</p>
+                <h6>By  {{project.profile}}</h6>
+             
+            </div>
+            
+            </div>
+            
+            </div>
+            {% endfor %} 
+    </div>
     
 </body>
 {%endblock%}
