--- a/awaards/templates/project-upload.html
+++ b/awaards/templates/project-upload.html
@@ -1,4 +1,4 @@
-% extends 'users/base.html' %}
+{% extends 'base.html' %}
 {% load bootstrap4%}
 {% block content %}
 <div class="row">
@@ -11,7 +11,7 @@
                 <h1 class="  text-center blue-text">
                     Upload Site</h1> <br>
                 <br>
-                <form action="{% url 'post_site' % }" method="POST" enctype="multipart/form-data">
+                <form action="{% url 'upload' % }" method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         {% bootstrap_form form %}
         
@@ -25,3 +25,4 @@
         </div>
     </div>
 </div>
+{%endblock%}
