--- a/awaards/templates/navbar.html
+++ b/awaards/templates/navbar.html
@@ -13,7 +13,7 @@
                 
 
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger"href="">ABOUT  |</a>
+                    <a class="nav-link js-scroll-trigger"href="{%url 'upload'%}">UPLOAD |</a>
                 </li>
                 
                 <li style="color:black;padding:15px;" class="nav-item"><a href="" class="nav-link js-scroll-trigger">{{current_user.username | upper}}  |</a> </li>
