--- a/awaards/templates/projects.html
+++ b/awaards/templates/projects.html
@@ -33,7 +33,7 @@
 <body>
     <div class="container-fluid">
             <div class="row">
-                    {% for project in project %}
+                    {% for project in projects %}
                     <div class="col-md-4">
                     <div class="card-group wow fadeInLeft"  style="margin:2%;" data-aos='fade-up'>
                             <div class="view overlay zoom ">
