--- a/awaards/templates/navbar.html
+++ b/awaards/templates/navbar.html
@@ -3,6 +3,19 @@
         <a class="navbar-brand js-scroll-trigger" href="/">
             <span class="open-nav">AWARDS</span>
         </a>
+        <div class="col-sm-4 col-md-4 navbar-right">
+
+                <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+        
+                  <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search Article" name="search_project">
+                    <div class="input-group-btn">
+                      <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                  </div>
+        
+                </form>
+        </div>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             more
