--- a/awaards/templates/projects.html
+++ b/awaards/templates/projects.html
@@ -35,15 +35,15 @@
             <div class="row">
                     {% for project in projects %}
                     <div class="col-md-4">
-                    <div class="card-group wow fadeInLeft"  style="margin:2%;" data-aos='fade-up'>
+                    <div class="card-group "  style="margin:2%;" data-aos='fade-up'>
                             <div class="view overlay zoom ">
                                     <img src="{{project.image.url}}" class="card-img-top">
                                     <div class="mask flex-center rgba-black-strong">
-                                        <a href="{% url 'projects' project.pk %}" class="btn btn-pink" >VIEW <i class="far fa-chevron-double-right"></i>  </a>
+                                        <a href="{% url 'projects' %}" class="btn btn-dark" >VIEW <i class="far fa-chevron-double-right"></i>  </a>
                                     </div>
                             </div>
                     
-                    <div class="card-body" style="border:2px #00BCD4;">
+                    <div class="card-body" style="border:2px;">
                         <a href=""><h5 class="strong-text"> <strong>{{project.title}}</strong> </h5> </a> <hr class="bg-info">
                         <p class="black-text pull-right">{{project.pub_date|date:"F d,Y"}}</p>
                         <h6>By  {{project.profile}}</h6>
