add fields to Rating model

--- a/awaards/templates/search.html
+++ b/awaards/templates/search.html
@@ -29,9 +29,9 @@
                 <div class="card-body">
             
                 <!-- Title -->
-                <h4 class="card-title">{{project.project_title}}</h4>
+                <h4 class="card-title">{{project.title}}</h4>
                 <!-- Text -->
-                <p class="card-text">{{project.project_description}}</p>
+                <p class="card-text">{{project.description}}</p>
     
                 <!-- Button -->
                 <!-- <a class="btn btn-pink" href=""><i class="fas fa-clone left"></i> Vote</a> -->
