--- a/awaards/templates/index.html
+++ b/awaards/templates/index.html
@@ -50,7 +50,7 @@
                     <div class="view overlay zoom ">
                             <img src="{{project.image.url}}" class="card-img-top">
                             <div class="mask flex-center rgba-black-strong">
-                                <a href="{% url 'projects' project.pk %}" class="btn btn-pink" >VIEW <i class="far fa-chevron-double-right"></i>  </a>
+                                <a href="{% url 'projects' %}" class="btn btn-pink" >VIEW <i class="far fa-chevron-double-right"></i>  </a>
                             </div>
                     </div>
             
