style navbar and edit header

--- a/awaards/templates/registration/base.html
+++ b/awaards/templates/registration/base.html
@@ -12,7 +12,7 @@
   <!-- Material Design Bootstrap -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.1/css/mdb.min.css" rel="stylesheet">
   
-  <link href="https://fonts.googleapis.com/css?family=Pacifico|EB+Garamond|Tangerine&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Clicker+Script|Life+Savers|Parisienne&display=swap" rel="stylesheet">
 
   
 
