--- a/awaards/templates/index.html
+++ b/awaards/templates/index.html
@@ -2,70 +2,60 @@
 {% load bootstrap4 %}
 {%block content%}
 <style>
-    .image{
-        background-image:url('https://images.pexels.com/photos/1937394/pexels-photo-1937394.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');
-        filter: blur(1px);
-        -webkit-filter: blur(1px);
-
-        /* Full height */
-        height: 600px;
-        /* Center and scale the image nicely */
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-    .bg-text {
-        background-color: rgb(0,0,0); /* Fallback color */
-        background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    
+    header {
+        background-color: rgb(2,2,29); 
+        opacity: 2;
         color: white;
         font-weight: bold;
         border: 3px solid #f1f1f1;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 2;
-        width: 80%;
-        padding: 100px;
+        width: 100%;
+        padding: 200px;
         text-align: center;
+        height: 100%;
+    }
+    h1{
+        font-family: 'Clicker Script', cursive; 
+        padding-top: 150px; 
+        font-size: 90px; 
+        letter-spacing: 10px;
+        font-weight: 10;
+    }
+    .head {
+        
+        font-size: 30px;
+       
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        left: 0;
+        letter-spacing: 4px;
+        text-align: center;
+        font-weight: 10;
     }
 </style>
 <body>
     <div class="container-fluid">
 
         <div class="row">
-                <div class="image">
-
-                    </div>
-                    <div class="bg-text">
-                    <h1>AWAARDS</h1>
-                    <p>The Projects' Gallery</p>
-                    </div>
+                <header>
+                        <div class="head">
+                                
+                                <h1>AWAARDS</h1>
+                               
+                                <p>The Projects' Gallery</p>
+        
+                                
+                        </div>
+                        
+                </header>
+                       
         </div>
     </div>
-    <div class="row">
-            {% for project in project %}
-            <div class="col-md-4">
-            <div class="card-group wow fadeInLeft"  style="margin:2%;" data-aos='fade-up'>
-                    <div class="view overlay zoom ">
-                            <img src="{{project.image.url}}" class="card-img-top">
-                            <div class="mask flex-center rgba-black-strong">
-                                <a href="{% url 'projects' %}" class="btn btn-pink" >VIEW <i class="far fa-chevron-double-right"></i>  </a>
-                            </div>
-                    </div>
-            
-            <div class="card-body" style="border:2px #00BCD4;">
-                <a href=""><h5 class="strong-text"> <strong>{{project.title}}</strong> </h5> </a> <hr class="bg-info">
-                <p class="black-text pull-right">{{project.pub_date|date:"F d,Y"}}</p>
-                <h6>By  {{project.profile}}</h6>
-             
-            </div>
-            
-            </div>
-            
-            </div>
-            {% endfor %} 
-    </div>
+    
     
 </body>
 {%endblock%}
