--- a/awaards/templates/navbar.html
+++ b/awaards/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light" id="nav">
     <div class="container-fluid">
         <a class="navbar-brand js-scroll-trigger" href="/">
-            <span class="open-nav">AWARDS</span>
+            <span class="open-nav"style="font-family: 'Clicker Script', cursive; ">AWAARDS</span>
         </a>
         <div class="col-sm-4 col-md-4 navbar-right">
 
@@ -9,16 +9,14 @@
         
                   <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search Article" name="search_project">
-                    <div class="input-group-btn">
-                      <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
+                    
                   </div>
         
                 </form>
         </div>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        <button class="navbar-toggler navbar-toggler-right" style="font-family: 'Clicker Script', cursive; " type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            more
+            MORE
             <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -26,15 +24,18 @@
                 
 
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger"href="{%url 'upload'%}">UPLOAD |</a>
+                    <a class="js-scroll-trigger"href="{%url 'upload'%}">POST PROJECT |</a>
                 </li>
                 
+               
+                
+                <li class="nav-item"><a class="js-scroll-trigger" href="{%url 'projects'%}">| PROJECTS |</a></li>
+                <li class="nav-item"><a class="js-scroll-trigger" href="{%url 'profile'%}">| PROFILE  |</a></li>
+                <li class="nav-item"><a class="js-scroll-trigger" href="{%url 'profile-form'%}">| CREATE PROFILE  |</a></li>
+        
                 <li style="color:black;padding:15px;" class="nav-item"><a href="" class="nav-link js-scroll-trigger">{{current_user.username | upper}}  |</a> </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/accounts/register/">SIGNUP |</a>
-                </li>
-                
-                <li class="nav-item"><a class="js-scroll-trigger" href="/accounts/login/">LOGIN  |</a></li>
+                <li class="nav-item"><a class="js-scroll-trigger" href="/accounts/register/">  |  SIGNUP |</a> </li>
+                <li class="nav-item"><a class="js-scroll-trigger" href="/accounts/login/">  |  LOGIN  |</a> </li>
                 
             </ul>
         </div>
