--- a/awaards/templates/projects.html
+++ b/awaards/templates/projects.html
@@ -44,7 +44,7 @@
                             </div>
                     
                     <div class="card-body" style="border:2px;">
-                        <a href=""><h5 class="strong-text"> <strong>{{project.title}}</strong> </h5> </a> <hr class="bg-info">
+                        <a href="{% url 'rate_project' project.id %}"><h5 class="strong-text"> <strong>{{project.title | upper}}</strong> </h5> </a> <hr class="bg-info">
                         <p class="black-text pull-right">{{project.pub_date|date:"F d,Y"}}</p>
                         <h6>By  {{project.profile}}</h6>
                      
