--- a/awaards/templates/navbar.html
+++ b/awaards/templates/navbar.html
@@ -1,3 +1,9 @@
+<style>
+    a{
+        color: rgb(7, 7, 24);
+    }
+
+</style>
 <nav class="navbar navbar-expand-lg navbar-light" id="nav">
     <div class="container-fluid">
         <a class="navbar-brand js-scroll-trigger" href="/">
@@ -24,18 +30,19 @@
                 
 
                 <li class="nav-item">
-                    <a class="js-scroll-trigger"href="{%url 'upload'%}">POST PROJECT |</a>
+                    <a class="js-scroll-trigger"href="{%url 'upload'%}">POST PROJECT      |</a>
                 </li>
                 
                
                 
-                <li class="nav-item"><a class="js-scroll-trigger" href="{%url 'projects'%}">| PROJECTS |</a></li>
-                <li class="nav-item"><a class="js-scroll-trigger" href="{%url 'profile'%}">| PROFILE  |</a></li>
-                <li class="nav-item"><a class="js-scroll-trigger" href="{%url 'profile-form'%}">| CREATE PROFILE  |</a></li>
+                <li class="nav-item"><a class="js-scroll-trigger" href="{%url 'projects'%}">PROJECTS     |</a></li>
+               
+                <li class="nav-item"><a class="js-scroll-trigger" href="{%url 'profile-form'%}"> CREATE PROFILE     |</a></li>
         
-                <li style="color:black;padding:15px;" class="nav-item"><a href="" class="nav-link js-scroll-trigger">{{current_user.username | upper}}  |</a> </li>
-                <li class="nav-item"><a class="js-scroll-trigger" href="/accounts/register/">  |  SIGNUP |</a> </li>
-                <li class="nav-item"><a class="js-scroll-trigger" href="/accounts/login/">  |  LOGIN  |</a> </li>
+                <li  class="nav-item"><a href="{%url 'profile' %" class="js-scroll-trigger">{{user | upper}}    |</a> </li>
+                <li class="nav-item"><a class="js-scroll-trigger" href="/accounts/register/">   SIGNUP    |</a> </li>
+                <li class="nav-item"><a class="js-scroll-trigger" href="/accounts/login/">    LOGIN     |</a> </li>
+                <li class="nav-item"><a class="js-scroll-trigger" href="/logout">    SIGNOUT     |</a> </li>
                 
             </ul>
         </div>
