--- a/awaards/templates/navbar.html
+++ b/awaards/templates/navbar.html
@@ -2,12 +2,16 @@
     a{
         color: rgb(7, 7, 24);
     }
+    #user{
+        font-family: 'Clicker Script', cursive; 
+        font-weight:70;
+    }
 
 </style>
 <nav class="navbar navbar-expand-lg navbar-light" id="nav">
     <div class="container-fluid">
         <a class="navbar-brand js-scroll-trigger" href="/">
-            <span class="open-nav"style="font-family: 'Clicker Script', cursive; ">AWAARDS</span>
+            <span class="open-nav"style="font-family: 'Clicker Script', cursive; font-weight: 200;">AWAARDS</span>
         </a>
         <div class="col-sm-4 col-md-4 navbar-right">
 
@@ -39,7 +43,7 @@
                
                 <li class="nav-item"><a class="js-scroll-trigger" href="{%url 'profile-form'%}"> CREATE PROFILE     |</a></li>
         
-                <li  class="nav-item"><a href="{%url 'profile' %" class="js-scroll-trigger">{{user | upper}}    |</a> </li>
+                <li  class="nav-item"><a id="user"href="{%url 'profile' %}" class="js-scroll-trigger">{{user | upper}}    |</a> </li>
                 <li class="nav-item"><a class="js-scroll-trigger" href="/accounts/register/">   SIGNUP    |</a> </li>
                 <li class="nav-item"><a class="js-scroll-trigger" href="/accounts/login/">    LOGIN     |</a> </li>
                 <li class="nav-item"><a class="js-scroll-trigger" href="/logout">    SIGNOUT     |</a> </li>
