edit profile link

--- a/awaards/templates/navbar.html
+++ b/awaards/templates/navbar.html
@@ -43,7 +43,7 @@
                
                 <li class="nav-item"><a class="js-scroll-trigger" href="{%url 'profile-form'%}"> CREATE PROFILE     |</a></li>
         
-                <li  class="nav-item"><a id="user"href="{%url 'profile' %}" class="js-scroll-trigger">{{user | upper}}    |</a> </li>
+                <li  class="nav-item"><a id="user"href="/profile/" class="js-scroll-trigger">{{user | upper}}    |</a> </li>
                 <li class="nav-item"><a class="js-scroll-trigger" href="/accounts/register/">   SIGNUP    |</a> </li>
                 <li class="nav-item"><a class="js-scroll-trigger" href="/accounts/login/">    LOGIN     |</a> </li>
                 <li class="nav-item"><a class="js-scroll-trigger" href="/logout">    SIGNOUT     |</a> </li>
